# kdui_mcp

./: .gitignore  CONTINUE_HERE.md  DECISION_MATRIX.md  FLASK_INTEGRATION_GUIDE.md  LICENSE  QUICK_START.md  README.md  RESEARCH_AND_OPTIONS.md  SETUP_STEPS.md  SETUP_WIZARD.md  SHADCN_COMPONENTS_PLAN.md  SHADCN_UPGRADE_PLAN.md  SHOWCASE.md  UIUX design rules.md  WHATS_NEW.md  setup.py  todo-comp-ui.md
examples/first_dashboard/: README.md  app.py  generate_nav_menu_test.py  generate_sidebar_test.py  test_badges.html  test_dropdown.html  test_nav_menu.html  test_progress.html  test_sidebar.html  test_skeleton.html  test_typography.html
examples/first_dashboard/templates/: base.html  dashboard.html
examples/landing_page/: README.md  app.py
mcp-server/: README.md  pyproject.toml
mcp-server/src/kd_ui_server/: __init__.py  design_system.py  resources.py  server.py
mcp-server/src/kd_ui_server/cli/: __init__.py  config_manager.py  platform_utils.py  setup.py
mcp-server/src/kd_ui_server/tools/: __init__.py  component.py  dashboard.py  form.py  landing_page.py  table.py
showcase/: app.py  requirements.txt
showcase/templates/: showcase.html
test/: README.md  pico-components-list.md  pico-example-components.md  test_minimal_buttons.html
